--- a/conf/barcode.service
+++ b/conf/barcode.service
@@ -1,15 +1,15 @@
 [Unit]
-Description=Accumen Initialisation
+Description=aCCumen Junior Barcode Scanner
 Requires=network.target
 After=network.target
 Wants=network.target
 
 [Service]
-ExecStart=/usr/local/bin/accumen.sh
+ExecStart=/usr/local/bin/barcode.bin
 KillMode=process
 StandardOutput=syslog
 StandardError=syslog
-SyslogIdentifier=Accumen Initialisation
+SyslogIdentifier=aCCumen Junior Barcode Scanner
 
 [Install]
 WantedBy=multi-user.target
