--- a/linux/camera/requirements.txt
+++ b/linux/camera/requirements.txt
@@ -1,2 +1,5 @@
 Pillow==8.4.0
 typer==0.4.0
+ids-peak/local/share/ids/bindings/python/wheel/ids_peak-1.6.2.0-cp310-cp310-linux_x86_64.whl
+ids-peak/local/share/ids/bindings/python/wheel/ids_peak_afl-1.2.1.0-cp310-cp310-linux_x86_64.whl
+ids-peak/local/share/ids/bindings/python/wheel/ids_peak_ipl-1.9.0.0-cp310-cp310-linux_x86_64.whl
