cleanup and updated dnsmasq

--- a/conf/dnsmasq.conf
+++ b/conf/dnsmasq.conf
@@ -13,7 +13,7 @@ port=0
 # specified interfaces (and the loopback) give the name of the
 # interface (eg eth0) here.
 # Repeat the line for more than one interface.
-interface=ens4f0
+interface=enp2s0f1
 
 # Set the domain for dnsmasq. this is optional, but if it is set, it
 # does the following things.
